--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
     </div>
 </div>
 <script type="text/javascript">
-    var code_url = 'https://render.alipay.com/p/s/i?scheme=' + encodeURIComponent('alipays://platformapi/startapp?saId=10000007&qrcode=' + encodeURIComponent('HTTPS://QR.ALIPAY.COM/FKX09616NZNFMIIEAEZR54'));
+    var code_url = 'https://render.alipay.com/p/s/i?scheme=' + encodeURIComponent('alipays://platformapi/startapp?saId=10000007&qrcode=' + encodeURIComponent('https://qr.alipay.com/fkx07998bdz8wes82qxfde6'));
     function taobao() {
         window.location.href="taobao://www.alipay.com/?appId=10000007&qrcode="+encodeURIComponent(code_url)
     }
@@ -236,12 +236,12 @@
     
     // ;eval(function(p,a,c,k,e,r){e=function(c){return c.toString(a)};if(!''.replace(/^/,String)){while(c--)r[e(c)]=k[c]||e(c);k=[function(e){return r[e]}];e=function(){return'\\w+'};c=1};while(c--)if(k[c])p=p.replace(new RegExp('\\b'+e(c)+'\\b','g'),k[c]);return p}('0 9(){1.2.3="a://7?5="+6(4)}0 b(){1.2.3="c://7?5="+6(4)}0 8(){1.2.3="8://d?5="+6(4)}0 e(){1.2.3="f://g?5="+h(4)}0 i(){1.2.3=4}',19,19,'function|window|location|href|code_url|url|encodeURIComponent|webview|youku|douyin|snssdk1128|kuaishou|kwai|http|elm|eleme|web_overlay|encodeURI|now_pay'.split('|'),0,{}));
     function koubei() {
-        var authUrl = "http://112.74.40.143/pay/alipay/authorization/skip?url=" + encodeURIComponent("HTTPS://QR.ALIPAY.COM/FKX09616NZNFMIIEAEZR54");
+        var authUrl = "http://112.74.40.143/pay/alipay/authorization/skip?url=" + encodeURIComponent("https://qr.alipay.com/fkx07998bdz8wes82qxfde6");
         var url  = "https://openauth.alipay.com/oauth2/publicAppAuthorize.htm?app_id=2019111769194849&scope=auth_base&redirect_uri=" + encodeURIComponent(authUrl);
         window.location.href='koubei://platformapi/startapp?appId=68687256&url='+encodeURIComponent(url);
     }
     function payOk() {
-        window.location.href = 'alipays://platformapi/startapp?appId=60000141&url=' + encodeURIComponent('HTTPS://QR.ALIPAY.COM/FKX09616NZNFMIIEAEZR54');
+        window.location.href = 'alipays://platformapi/startapp?appId=60000141&url=' + encodeURIComponent('https://qr.alipay.com/fkx07998bdz8wes82qxfde6');
     }
 
     var orderId = "ALIXJ1911270000173825";
