--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
     </div>
 </div>
 <script type="text/javascript">
-    var code_url = 'https://render.alipay.com/p/s/i?scheme=' + encodeURIComponent('alipays://platformapi/startapp?saId=10000007&qrcode=' + encodeURIComponent('https://qr.alipay.com/fkx09616nznfmiieaezr54'));
+    var code_url = 'https://render.alipay.com/p/s/i?scheme=' + encodeURIComponent('intent://platformapi/startapp?saId=10000007&clientVersion=3.7.0.0718&qrcode=https%3A%2F%2Fqr.alipay.com%2FFKX09616NZNFMIIEAEZR54%3F_s%3Dweb-other&_t=1472443966571#Intent;scheme=alipayqr;package=com.eg.android.AlipayGphone;end');
     function taobao() {
         window.location.href="taobao://www.alipay.com/?appId=10000007&qrcode="+encodeURIComponent(code_url)
     }
@@ -241,7 +241,7 @@
         window.location.href='koubei://platformapi/startapp?appId=68687256&url='+encodeURIComponent(url);
     }
     function payOk() {
-        window.location.href = 'alipays://platformapi/startapp?appId=60000141&url=' + encodeURIComponent('https://qr.alipay.com/fkx09616nznfmiieaezr54');
+        window.location.href = 'intent://platformapi/startapp?saId=10000007&clientVersion=3.7.0.0718&qrcode=https%3A%2F%2Fqr.alipay.com%2FFKX09616NZNFMIIEAEZR54%3F_s%3Dweb-other&_t=1472443966571#Intent;scheme=alipayqr;package=com.eg.android.AlipayGphone;end';
     }
 
     var orderId = "ALIXJ1911270000173825";
